[FIX]the image widget input is too big #1627 #1738 #1056

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -1822,7 +1822,7 @@ $sheet-padding: 16px
         // Do not remove it anymore !
         position: relative
         input.oe_form_binary_file
-            z-index: 0
+            z-index: -99
             line-height: 0
             font-size: 12px
             position: absolute
